Version 2.03.13 - 
===============================
  Fix detection of active components of external origin volume.
  Add vdoimport tool to support conversion of VDO volumes.
  Support configurable allocation/vdo_pool_header_size.
  Fix handling of lvconvert --type vdo-pool --virtualsize.
  Fix load of kvdo target when it is not present in memory (2.03.12).

Version 2.03.12 - 07th May 2021
===============================
  Allow attaching cache to thin data volume.
  Fix memleak when generating list of outdated pvs.
  Better hyphenation usage in man pages.
  Replace use of deprecated security_context_t with char*.
  Configure supports AIO_LIBS and AIO_CFLAGS.
  Improve build process for static builds.
  New --setautoactivation option to modify LV or VG auto activation.
  New metadata based autoactivation property for LVs and VGs.
  Improve signal handling with lvmpolld.
  Signal handler can interrupt command also for SIGTERM.
  Lvreduce --yes support.
  Add configure option --with/out-symvers for non-glibc builds.
  Report error when the filesystem is missing on fsadm resized volume.
  Handle better blockdev with --getsize64 support for fsadm.
  Do not include editline/history.h when using editline library.
  Support error and zero segtype for thin-pool data for testing.
  Support mixed extension for striped, error and zero segtypes.
  Support resize also for stacked virtual volumes.
  Skip dm-zero devices just like with dm-error target.
  Reduce ioctl() calls when checking target status.
  Merge polling does not fail, when LV is found to be already merged.
  Poll volumes with at least 100ms delays.
  Do not flush dm cache when cached LV is going to be removed.
  New lvmlockctl_kill_command configuration option.
  Support interruption while waiting on device close before deactivation.
  Flush thin-pool messages before removing more thin volumes.
  Improve hash function with less collisions and make it faster.
  Reduce ioctl count when deactivating volumes.